--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           ><img src="./images/virus-solid.svg" alt=""
         /></a>
         <h1 class="covidHeader_header">
-          COVID-19 dashboard for TamilNadu state government
+          COVID-19 Dashboard for TamilNadu State
         </h1>
       </header>
       <main id="main-content">
